[package]
name = "rust_overflow_sentinel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = "1.0"
regex = "*"
rand = "0.8.5"
lazy_static = "1.4.0"
shared_memory = "0.12.4"
libc = "0.2.153"

[lib]
name = "rust_overflow_sentinel"
crate-type = ["staticlib"]

